[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genro-auth"
version = "0.1.0"
description = "Authentication and authorization library for Genro microservices ecosystem"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Genropy Team", email = "info@genropy.org"}
]
keywords = ["auth", "authentication", "authorization", "tokens", "fastapi", "microservices", "genro"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Framework :: FastAPI",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.104.0",
]
redis = [
    "redis>=5.0.0",
]
all = [
    "fastapi>=0.104.0",
    "redis>=5.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "httpx>=0.25.0",  # For FastAPI testing
]

[project.urls]
Homepage = "https://github.com/genropy/genro-auth"
Documentation = "https://genro-auth.readthedocs.io"
Repository = "https://github.com/genropy/genro-auth"
"Bug Tracker" = "https://github.com/genropy/genro-auth/issues"

[tool.setuptools]
packages = ["genro_auth"]

[tool.setuptools.package-data]
genro_auth = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=genro_auth --cov-report=term-missing"
asyncio_mode = "auto"
